ui/components: fix check-box label text wrap
Ideally, the entire input-button-component should be fixed, but that
would require rewriting the radio-button-component and the templates
using it. This should be okay for now and can be cleaned up later.

--- a/src/app/ui/components/form/check-box/styles.less
+++ b/src/app/ui/components/form/check-box/styles.less
@@ -1,7 +1,22 @@
+@import (reference) "~ui/styles/config";
+
+
 .input-btn-component.check-box-component {
 	&.no-label {
 		> i {
 			margin: 0;
+		}
+	}
+
+	&:not(.no-label) {
+		display: inline-flex;
+
+		> i {
+			@line: ( @input-btn-size * @line-height-base );
+			@size: ( @input-btn-size + 2 * @input-btn-outline-size );
+
+			flex: 0 0 @input-btn-size;
+			margin: ( ( @line - @size ) / 2 ) 0 0;
 		}
 	}
 }
