--- a/src/app/ui/components/settings-hotkey/styles.less
+++ b/src/app/ui/components/settings-hotkey/styles.less
@@ -14,7 +14,4 @@
 			font-style: italic;
 		}
 	}
-	> .check-box-component > i {
-		margin: 0;
-	}
 }
